--- a/src/menu-template.hbs
+++ b/src/menu-template.hbs
@@ -1,7 +1,9 @@
-{{#each this}}
 <li class="menu__item">
     <article class="card">
-        <img src={{image}} alt={{name}} />
+        <<<<<<< Updated upstream <img src={{image}} alt={{name}} class="card__image" />
+        =======
+        <img src={{image}} alt={{name}} class="card__image" />
+        >>>>>>> Stashed changes
         <div class="card__content">
             <h2 class="card__name">{{name}}</h2>
             <p class="card__price">
@@ -24,4 +26,3 @@
         </button>
     </article>
 </li>
-{{/each}}
