--- a/src/menu-template.hbs
+++ b/src/menu-template.hbs
@@ -1,9 +1,6 @@
 <li class="menu__item">
     <article class="card">
-        <<<<<<< Updated upstream <img src={{image}} alt={{name}} class="card__image" />
-        =======
         <img src={{image}} alt={{name}} class="card__image" />
-        >>>>>>> Stashed changes
         <div class="card__content">
             <h2 class="card__name">{{name}}</h2>
             <p class="card__price">
@@ -14,8 +11,8 @@
             <p class="card__descr">{{description}}</p>
 
             <ul class="tag-list">
-                {{#each items}}
-                <li class="tag-list__item">{{ingredients}}</li>
+                {{#each ingredients}}
+                <li class="tag-list__item">{{this}}</li>
                 {{/each}}
             </ul>
         </div>
